# nienna_renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  mesh-refactor.slang
include/: AABB.hpp  Allocator.hpp  App.hpp  Application.hpp  Asset.hpp  Buffer.hpp  Camera.hpp  Command.hpp  DebugView.hpp  DepthTarget.hpp  Descriptor.hpp  Device.hpp  DrawItem.hpp  Frame.hpp  FrameContext.hpp  Geometry.hpp  GltfLoader.hpp  Image.hpp  ImageLayoutState.hpp  Instance.hpp  LayoutTracker.hpp  Material.hpp  MaterialPacking.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineLayout.hpp  Queue.hpp  RenderAsset.hpp  RenderContext.hpp  RenderTargets.hpp  RenderableResources.hpp  Renderer.hpp  RendererConfig.hpp  ResourceAllocator.hpp  ResourceBindings.hpp  ResourceLayout.hpp  ResourceUpdate.hpp  Scene.hpp  SceneDrawList.hpp  SceneRenderData.hpp  (+18 more)
shaders/: mesh-refactor.slang  mesh-refactor.slang.frag  mesh-refactor.slang.frag.spv  mesh-refactor.slang.spv  mesh-refactor.slang.vert  mesh-refactor.slang.vert.spv  mesh_basepass.slang  non-uniform-indexing.slang  shader.frag.spv  shader.glsl.spv  shader.slang  shader.slang.frag  shader.slang.spv  shader.slang.vert  shader.spv
src/: AABB.cpp  Allocator.cpp  App.cpp  Camera.cpp  Command.cpp  DepthTarget.cpp  Descriptor.cpp  Device.cpp  Frame.cpp  FrameContext.cpp  GltfLoader.cpp  ImageLayoutState.cpp  Instance.cpp  LayoutTracker.cpp  MaterialPacking.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineLayout.cpp  Queue.cpp  RenderContext.cpp  RenderTargets.cpp  RenderableResources.cpp  Renderer.cpp  ResourceAllocator.cpp  ResourceBindings.cpp  ResourceLayout.cpp  ResourceUpdate.cpp  Scene.cpp  SceneDrawList.cpp  SceneRenderData.cpp  SceneResources.cpp  SceneView.cpp  Shader.cpp  ShaderInterface.cpp  Surface.cpp  Swapchain.cpp  Sync.cpp  Timeline.cpp  UniqueImage.cpp  Utility.cpp  (+6 more)
